--- a/src/app/pages/dte/info-board/create/info-board-create.component.html
+++ b/src/app/pages/dte/info-board/create/info-board-create.component.html
@@ -18,89 +18,25 @@
           <div class="ayo-middle py-24" fxLayout="column">
             <form
               autocomplete="off"
-              [formGroup]="formUndian"
+              [formGroup]="formBoard"
               fxLayout="row"
               fxLayoutGap="16px"
             >
               <div fxFlex="70%">
-                <div fxLayout="row" class="px-24">
-                  <mat-form-field fxFlex class="is-light form-primary">
-                    <input
-                      matInput
-                      type="text"
-                      placeholder="Nama Program Kupon Undian"
-                      formControlName="name"
-                      name="name"
-                    />
-                    <mat-error
-                      *ngIf="
-                        formUndian.controls['name'].hasError('required') &&
-                        formUndian.controls['name'].touched
-                      "
-                    >
-                      Nama Program Kupon Undian
-                      {{ "global.messages.mandatory_text" | translate }}
-                    </mat-error>
-                  </mat-form-field>
+
+                <div
+                  fxLayout="row"
+                  fxLayout.lt-md="column"
+                  fxLayoutGap="60px"
+                  fxLayoutGap.lt-md="0px"
+                  class="px-24"
+                >
+                <mat-form-field fxFlex="50" class="is-light form-primary">
+                  <mat-select formControlName="jenis_info_board" placeholder="Jenis Info Board">
+                      <mat-option *ngFor="let item of infoBoard" [value]="item.value">{{item.name}}</mat-option>
+                  </mat-select>
+                </mat-form-field>
                 </div>
-                <div fxLayout="row" class="px-24">
-                  <mat-form-field fxFlex class="is-light form-primary">
-                    <input
-                      matInput
-                      type="number"
-                      placeholder="Jumlah Koin yang dibutuhkan per Kupon"
-                      formControlName="coin"
-                      name="coin"
-                    />
-                    <mat-error
-                      *ngIf="
-                        formUndian.controls['coin'].hasError('required') &&
-                        formUndian.controls['coin'].touched
-                      "
-                    >
-                      Koin {{ "global.messages.mandatory_text" | translate }}
-                    </mat-error>
-                  </mat-form-field>
-                </div>
-                <!-- <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px" class="px-24">
-                  <mat-form-field fxFlex="35%" class="is-light form-primary">
-                    <input matInput formControlName="start_date" [min]="minDateFrom" (focus)="startDate.open()"
-                      [matDatepicker]="startDate" placeholder="Tanggal Awal Penukaran Kupon Undian" (dateChange)="setMinEndDate()">
-                    <mat-datepicker-toggle matSuffix [for]="startDate">
-                      <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
-                    </mat-datepicker-toggle>
-                    <mat-datepicker #startDate></mat-datepicker>
-                    <mat-error
-                      *ngIf="formUndian.controls['start_date'].hasError('required') && formUndian.controls['start_date'].touched">
-                      Tanggal Awal Penukaran Kupon Undian {{'global.messages.mandatory_text' | translate}}
-                    </mat-error>
-                  </mat-form-field>
-      
-                  <mat-form-field fxFlex="35%" class="is-light form-primary">
-                    <input matInput formControlName="end_date" (focus)="endDate.open()" [matDatepicker]="endDate"
-                      placeholder="Tanggal Akhir Penukaran Kupon Undian" [min]="minDate" (dateChange)="setMinExpireDate()">
-                    <mat-datepicker-toggle matSuffix [for]="endDate">
-                      <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
-                    </mat-datepicker-toggle>
-                    <mat-datepicker #endDate></mat-datepicker>
-                    <mat-error
-                      *ngIf="formUndian.controls['end_date'].hasError('required') && formUndian.controls['end_date'].touched">
-                      Tanggal Akhir Penukaran Kupon Undian {{'global.messages.mandatory_text' | translate}}
-                    </mat-error>
-                  </mat-form-field>
-                  <mat-form-field fxFlex="35%" class="is-light form-primary">
-                    <input matInput formControlName="announcement_date" (focus)="announcmentDate.open()" [matDatepicker]="announcmentDate"
-                      placeholder="Tanggal Pengumuman Pemenang Berakhir" [min]="minDate" (dateChange)="setMinExpireDate()">
-                    <mat-datepicker-toggle matSuffix [for]="announcmentDate">
-                      <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
-                    </mat-datepicker-toggle>
-                    <mat-datepicker #announcmentDate></mat-datepicker>
-                    <mat-error
-                      *ngIf="formUndian.controls['announcement_date'].hasError('required') && formUndian.controls['announcement_date'].touched">
-                      Tanggal Pengumuman Pemenang Berakhir {{'global.messages.mandatory_text' | translate}}
-                    </mat-error>
-                  </mat-form-field>
-                </div> -->
 
                 <div fxLayout="row" fxFlex="100" class="px-24">
                   <mat-form-field fxFlex="50%" class="is-light form-primary">
@@ -119,9 +55,9 @@
                     <mat-datepicker #startDate></mat-datepicker>
                     <mat-error
                       *ngIf="
-                        formUndian.controls['start_date'].hasError(
+                        formBoard.controls['start_date'].hasError(
                           'required'
-                        ) && formUndian.controls['start_date'].touched
+                        ) && formBoard.controls['start_date'].touched
                       "
                     >
                       {{ ls.locale.manajemen_barang_sku.manajemen_koin.text15 }}
@@ -151,9 +87,9 @@
                     ></ngx-material-timepicker>
                     <mat-error
                       *ngIf="
-                        formUndian.controls['start_time'].hasError(
+                        formBoard.controls['start_time'].hasError(
                           'required'
-                        ) && formUndian.controls['start_time'].touched
+                        ) && formBoard.controls['start_time'].touched
                       "
                     >
                       {{ ls.locale.manajemen_barang_sku.manajemen_koin.text15 }}
@@ -167,7 +103,7 @@
                     <input
                       matInput
                       formControlName="end_date"
-                      [min]="formUndian.get('start_date').value"
+                      [min]="formBoard.get('start_date').value"
                       (focus)="endDate.open()"
                       [matDatepicker]="endDate"
                       placeholder="Tanggal Berakhir"
@@ -178,9 +114,9 @@
                     <mat-datepicker #endDate></mat-datepicker>
                     <mat-error
                       *ngIf="
-                        formUndian.controls['start_date'].hasError(
+                      formBoard.controls['start_date'].hasError(
                           'required'
-                        ) && formUndian.controls['start_date'].touched
+                        ) && formBoard.controls['start_date'].touched
                       "
                     >
                       {{ ls.locale.manajemen_barang_sku.manajemen_koin.text16 }}
@@ -209,8 +145,8 @@
                     ></ngx-material-timepicker>
                     <mat-error
                       *ngIf="
-                        formUndian.controls['end_time'].hasError('required') &&
-                        formUndian.controls['end_time'].touched
+                      formBoard.controls['end_time'].hasError('required') &&
+                      formBoard.controls['end_time'].touched
                       "
                     >
                       {{ ls.locale.manajemen_barang_sku.manajemen_koin.text15 }}
@@ -219,102 +155,43 @@
                   </mat-form-field>
                 </div>
 
-                <div fxLayout="row" fxFlex="100" class="px-24">
-                  <mat-form-field fxFlex="50%" class="is-light form-primary">
+                <div fxLayout="row" class="px-24">
+                  <mat-form-field fxFlex class="is-light form-primary">
                     <input
                       matInput
-                      formControlName="announcement_date"
-                      (focus)="announcmentDate.open()"
-                      [matDatepicker]="announcmentDate"
-                      placeholder="Tanggal Pengumuman Pemenang Berakhir"
-                      [min]="formUndian.get('end_date').value"
-                      (dateChange)="setMinExpireDate()"
+                      type="text"
+                      placeholder="Nama Info Board"
+                      formControlName="name_board"
+                      name="name_board"
                     />
-                    <mat-datepicker-toggle matSuffix [for]="announcmentDate">
-                      <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
-                    </mat-datepicker-toggle>
-                    <mat-datepicker #announcmentDate></mat-datepicker>
                     <mat-error
                       *ngIf="
-                        formUndian.controls['announcement_date'].hasError(
-                          'required'
-                        ) && formUndian.controls['announcement_date'].touched
+                      formBoard.controls['name_board'].hasError('required') &&
+                      formBoard.controls['name_board'].touched
                       "
                     >
-                      Tanggal Pengumuman Pemenang Berakhir
-                      {{ "global.messages.mandatory_text" | translate }}
-                    </mat-error>
-                  </mat-form-field>
-                  <div fxFlex="10"></div>
-                  <mat-form-field
-                    fxFlex="30"
-                    class="is-light form-primary"
-                    id="announcement_time"
-                  >
-                    <input
-                      matInput
-                      formControlName="announcement_time"
-                      placeholder="Jam Pengumuman Pemenang Berakhir"
-                      [ngxTimepicker]="fullTime3"
-                      [format]="24"
-                      readonly
-                    />
-                    <mat-icon matSuffix>access_time</mat-icon>
-                    <ngx-material-timepicker
-                      #fullTime3
-                    ></ngx-material-timepicker>
-                    <mat-error
-                      *ngIf="
-                        formUndian.controls['end_time'].hasError('required') &&
-                        formUndian.controls['end_time'].touched
-                      "
-                    >
-                      {{ ls.locale.manajemen_barang_sku.manajemen_koin.text15 }}
+                      Nama Info Board
                       {{ "global.messages.mandatory_text" | translate }}
                     </mat-error>
                   </mat-form-field>
                 </div>
-
-                <div
-                  fxLayout="row"
-                  fxLayout.lt-md="column"
-                  fxLayoutGap="60px"
-                  fxLayoutGap.lt-md="0px"
-                  class="px-24"
-                >
-                  <!-- <mat-form-field fxFlex="50" class="is-light form-primary">
-                    <mat-select formControlName="group_trade_program" placeholder="{{'dte.group_trade_program.text1' | translate}}" multiple>
-                      <ngx-mat-select-search [formControl]="filterGTP" placeholderLabel="{{'global.label.search' | translate}} {{'dte.group_trade_program.text1' | translate}}..."
-                        noEntriesFoundLabel="{{'global.messages.data_not_found' | translate}}"></ngx-mat-select-search>
-                      <mat-option *ngFor="let item of filteredGTP | async" [value]="item.id">
-                        {{item.name}}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field> -->
-                  <mat-form-field fxFlex="50" class="is-light form-primary">
-                    <mat-select
-                      formControlName="sub_group_trade_program"
-                      placeholder="Sub Group Trade Program"
-                      multiple
+                <div fxLayout="row" class="px-24">
+                  <mat-form-field fxFlex class="is-light form-primary">
+                    <input
+                      matInput
+                      type="text"
+                      placeholder="Deskripsi Info Board"
+                      formControlName="description_board"
+                      name="description_board"
+                    />
+                    <mat-error
+                      *ngIf="
+                      formBoard.controls['description_board'].hasError('required') &&
+                      formBoard.controls['description_board'].touched
+                      "
                     >
-                      <ngx-mat-select-search
-                        [formControl]="filterSGTP"
-                        placeholderLabel="{{
-                          'global.label.search' | translate
-                        }} Sub {{
-                          'dte.group_trade_program.text1' | translate
-                        }}..."
-                        noEntriesFoundLabel="{{
-                          'global.messages.data_not_found' | translate
-                        }}"
-                      ></ngx-mat-select-search>
-                      <mat-option
-                        *ngFor="let item of filteredSGTP | async"
-                        [value]="item.id"
-                      >
-                        {{ item.name }}
-                      </mat-option>
-                    </mat-select>
+                      Deskripsi Info Board {{ "global.messages.mandatory_text" | translate }}
+                    </mat-error>
                   </mat-form-field>
                 </div>
 
