--- a/src/app/pages/dte/audience/create/personalize/audience-create-personalize.component.html
+++ b/src/app/pages/dte/audience/create/personalize/audience-create-personalize.component.html
@@ -122,7 +122,7 @@
                     class="is-danger"
                     (click)="importAudience()"
                   >
-                    <mat-icon>arrow_downward</mat-icon> {{'global.button.import' | translate}} XLSX
+                    <mat-icon>arrow_downward</mat-icon> {{'global.button.import' | translate}} CSV
                   </button>
                 </div>
               </div>
