--- a/src/app/pages/dte/audience/edit/personalize/audience-edit-personalize.component.html
+++ b/src/app/pages/dte/audience/edit/personalize/audience-edit-personalize.component.html
@@ -123,7 +123,7 @@
                     (click)="importAudience()"
                     [disabled]="isDetail"
                   >
-                    <mat-icon>arrow_downward</mat-icon> {{'global.button.import' | translate}} XLSX
+                    <mat-icon>arrow_downward</mat-icon> {{'global.button.import' | translate}} CSV
                   </button>
                 </div>
               </div>
