--- a/src/app/pages/dte/audience/import/personalize/import-audience-personalize.component.html
+++ b/src/app/pages/dte/audience/import/personalize/import-audience-personalize.component.html
@@ -5,7 +5,7 @@
     <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
 
       <div fxFlex fxLayout="row" fxLayoutAlign="start center">
-        <span>{{ls.locale.global.label.upload_file}} XLS</span>
+        <span>{{ls.locale.global.label.upload_file}} CSV</span>
       </div>
 
     </div>
@@ -19,8 +19,8 @@
 
   <div mat-dialog-content class="p-24 m-0" fusePerfectScrollbar>
     <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files"
-      accept=".xlsx, .xls" [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag"
-      (fileChange)="preview($event)">
+      accept=".csv" [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag"
+      (fileChange)="requestPreview($event)">
       <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
         <mat-icon class="secondary-text s-48">attach_file</mat-icon>
         <br>
@@ -44,63 +44,13 @@
     <div class="responsive" *ngIf="!requestingPreview">
       <ngx-datatable [rowClass]="getRowClass" class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [offset]="offsetPagination" [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable" [selectionType]="'checkbox'" [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="onPageChange($event)">
 
-        <ngx-datatable-column name="{{'call_objective.text8' | translate}}" prop="name">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value" let-rowIndex="rowIndex">
-            {{ row.name }}
-          </ng-template>
-        </ngx-datatable-column>
-
-        <!-- <ngx-datatable-column name="No. Ponsel" prop="phone">
+        <ngx-datatable-column name="{{'call_objective.text8' | translate}}" prop="business_name"></ngx-datatable-column>
+        <ngx-datatable-column name="{{'global.label.code' | translate}}" prop="business_code"></ngx-datatable-column>
+        <ngx-datatable-column name="{{'global.label.type' | translate}}" prop="business_classification"></ngx-datatable-column>
+        <ngx-datatable-column name="{{'dte.audience.text16' | translate}}" prop="business_is_registered"></ngx-datatable-column>
+        <ngx-datatable-column name="{{ls.locale.global.messages.invalid_reason}}" prop="message">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{ row.phone }}
-          </ng-template>
-        </ngx-datatable-column> -->
-
-        <ngx-datatable-column name="{{'global.label.code' | translate}}" prop="code">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{ row.code }}
-          </ng-template>
-        </ngx-datatable-column>
-
-        <ngx-datatable-column name="{{'global.label.type' | translate}}" prop="tipe">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{ row.tipe }}
-          </ng-template>
-        </ngx-datatable-column>
-
-        <ngx-datatable-column name="{{'call_objective.text13' | translate}}" prop="ff_name">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{ row.ff_name }}
-          </ng-template>
-        </ngx-datatable-column>
-
-        <ngx-datatable-column name="{{'dte.audience.text16' | translate}}" prop="registered">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{ row.registered }}
-          </ng-template>
-        </ngx-datatable-column>
-
-        <!-- <ngx-datatable-column name="Divisi" prop="division_code">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{ row.division_code }}
-          </ng-template>
-        </ngx-datatable-column>
-
-        <ngx-datatable-column name="Wilayah" prop="region_code">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{ row.region_code }}
-          </ng-template>
-        </ngx-datatable-column>
-
-        <ngx-datatable-column name="Area" prop="area_code">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{ row.area_code }}
-          </ng-template>
-        </ngx-datatable-column> -->
-
-        <ngx-datatable-column name="{{ls.locale.global.messages.invalid_reason}}" prop="reason">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{ row.reason ? row.reason : '-' }}
+            {{ row.message ? row.message : '-' }}
           </ng-template>
         </ngx-datatable-column>
       </ngx-datatable>
