--- a/src/app/pages/dte/lottery/dialog/dialog-process-save/dialog-process-save.component.html
+++ b/src/app/pages/dte/lottery/dialog/dialog-process-save/dialog-process-save.component.html
@@ -26,7 +26,7 @@
         (click)="dialogRef.close()"
         fxFlex="50"
       >
-        {{'dte.audience.cancel_check' | translate}}
+        {{'global.button.cancel' | translate}}
       </button>
     </div>
   </div>
