[update]:: re-change

--- a/src/app/pages/dte/audience/import/personalize/import-audience-personalize.component.html
+++ b/src/app/pages/dte/audience/import/personalize/import-audience-personalize.component.html
@@ -5,7 +5,7 @@
     <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
 
       <div fxFlex fxLayout="row" fxLayoutAlign="start center">
-        <span>{{ls.locale.global.label.upload_file}} XLSX</span>
+        <span>{{ls.locale.global.label.upload_file}} CSV</span>
       </div>
 
     </div>
