Update info board

--- a/src/app/pages/dte/info-board/create/info-board-create.component.html
+++ b/src/app/pages/dte/info-board/create/info-board-create.component.html
@@ -32,7 +32,7 @@
                   class="px-24"
                 >
                 <mat-form-field fxFlex="50" class="is-light form-primary">
-                  <mat-select formControlName="jenis_info_board" placeholder="Jenis Info Board">
+                  <mat-select formControlName="type" placeholder="Jenis Info Board">
                       <mat-option *ngFor="let item of infoBoard" [value]="item.value">{{item.name}}</mat-option>
                   </mat-select>
                 </mat-form-field>
