[update]:: disable on edit store online

--- a/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
+++ b/src/app/pages/user-management/retailer/edit/retailer-edit.component.html
@@ -367,7 +367,7 @@
               <mat-label>
                 {{'retailer.list.text4' | translate}}:
               </mat-label>
-              <mat-radio-group formControlName="order_online" class="radio-group pb-16" fxLayout="row wrap">
+              <mat-radio-group disabled formControlName="order_online" class="radio-group pb-16" fxLayout="row wrap">
                 <mat-radio-button class="radio-button" [value]="1">{{'global.label.yes' | translate}}</mat-radio-button>
                 <mat-radio-button class="radio-button" [value]="0">{{'global.label.no' | translate}}</mat-radio-button>
               </mat-radio-group>
